# Sanji

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  engine.toml
.cursor/rules/: sanji.mdc
assets/: .gitkeep
examples/: basic_demo.rs  comprehensive_demo.rs  simple_demo.rs
src/: lib.rs  lib_disabled.rs  main.rs  sanji_shader.wgsl  window_demo.rs
src/animation/: animation_clip.rs  animator.rs  keyframe.rs  mod.rs  skeleton.rs  tween.rs
src/assets/: asset_cache.rs  asset_handle.rs  asset_loader.rs  asset_manager.rs  mod.rs
src/audio/: audio_listener.rs  audio_source.rs  audio_system.rs  mod.rs
src/core/: app.rs  engine.rs  logging.rs  mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  query.rs  system.rs  world.rs
src/events/: mod.rs
src/input/: gamepad.rs  input_manager.rs  input_map.rs  keyboard.rs  mod.rs  mouse.rs
src/math/: bounds.rs  easing.rs  frustum.rs  intersect.rs  mod.rs  noise.rs  ray.rs
src/particles/: effects.rs  emitter.rs  mod.rs  particle.rs  systems.rs
src/performance/: debugger.rs  frame_analyzer.rs  memory_tracker.rs  metrics.rs  mod.rs  profiler.rs
src/physics/: collider.rs  mod.rs  rigid_body.rs  systems.rs  world.rs
src/render/: camera.rs  material.rs  mesh.rs  mod.rs  post_processing.rs  render_system.rs  shader.rs  shadows.rs  texture.rs
src/scene/: mod.rs  scene.rs  scene_graph.rs  scene_manager.rs
src/serialization/: asset_serializer.rs  binary_format.rs  component_serializer.rs  json_format.rs  mod.rs  scene_serializer.rs
src/time/: mod.rs
src/ui/: events.rs  mod.rs  (+4 more)
(+9 files in other folders)
